opam-version: "1.2"
name: "OCamURL-server"
version: "0.1.0"
maintainer: "Donovan Mueller <zotobi@gmail.com>"
authors: "Donovan Mueller <zotobi@gmail.com>"
homepage: "https://github.com/RightThisMinute/OCamURL-server"
#bug-reports: "https://github.com/RightThisMinute/OCamURL-server/issues"
#license: ""
#dev-repo: "https://github.com/RightThisMinute/OCamURL-server"
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "OCamURL-server"]
depends: [
  "ocamlfind" {build}
]
