opam-version: "1.2"
name: "rtmdottv"
version: "~unknown"
maintainer: "Donovan Mueller <zotobi@gmail.com>"
authors: "Donovan Mueller <zotobi@gmail.com>"
homepage: "https://dashboard.rtm.tv"
#bug-reports: ""
#license: ""
#dev-repo: ""
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "rtmdottv"]
depends: [
  "ocamlfind" {build}
]
